--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
   .clone ~ img {
     width: 6rem;
     height: 6rem;
+    max-height: 6rem;
     background: #fff;
     user-select: none;
     padding: 0.5rem;
